[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "discord-py>=2.4.0",
    "ffmpeg==1.4",
    "flask>=3.1.0",
    "google-generativeai>=0.8.4",
    "openai>=1.61.1",
    "opuslib>=3.0.1",
    "python-dotenv>=1.0.1",
    "yt-dlp>=2025.1.26",
]
