[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["kaushal"]

[tool.poetry.dependencies]
python = ">=3.11"
discord-py = ">=2.4.0"
ffmpeg = "==1.4"
flask = ">=3.1.0"
google-generativeai = ">=0.8.4"
openai = ">=1.61.1"
opuslib = ">=3.0.1"
python-dotenv = ">=1.0.1"
requests = ">=2.32.3"
yt-dlp = ">=2025.1.26"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
